--- a/blackjack.html
+++ b/blackjack.html
@@ -54,6 +54,11 @@
             <p id="player-total-value">Your Total:</p>
         </section>
 
+        <!-- User Balance Section -->
+        <section id="balance-display" class="balance-display">
+            Total Balance: <span id="total-balance">0.00</span>
+        </section>
+
         <!-- Betting Chips Section -->
         <section id="chips-area" class="chips-section">
             <img id="chip-50" class="chip" src="img/chip_red_top.png" data-value="50" alt="£50 Chip" draggable="true">
