--- a/rocket-crash.html
+++ b/rocket-crash.html
@@ -37,6 +37,9 @@
     <div class="rocket-crash-game">
         <h1>Rocket Crash Game</h1>
 
+        <!-- Display Total Balance -->
+        <div id="total-balance" class="total-balance-text">Total Balance: £0.00</div>
+
         <!-- Graph Container -->
         <div id="graph-container">
             <canvas id="multiplier-graph" width="400" height="200"></canvas>
@@ -63,6 +66,7 @@
         <div id="crash-point" class="crash-point-text"></div>
         <div id="rocket-profit">Total Profit: £0</div>
     </div>
+
 
     <!-- JavaScript Library for Charts -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
