--- a/index.html
+++ b/index.html
@@ -2,142 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Spin Wheel</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: #f0f0f0;
-        }
-        #wheelCanvas {
-            border: 5px solid #333;
-            border-radius: 50%;
-        }
-        #spinButton {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=user-auth.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-
-    <canvas id="wheelCanvas" width="500" height="500"></canvas>
-    <button id="spinButton">Spin the Wheel</button>
-
-    <script>
-        const canvas = document.getElementById('wheelCanvas');
-        const ctx = canvas.getContext('2d');
-        const segments = ['Prize 1', 'Prize 2', 'Prize 3', 'Prize 4', 'Prize 5', 'Prize 6', 'Prize 7', 'Prize 8'];
-        const colors = ['#FF5733', '#33FF57', '#3357FF', '#F333FF', '#FF33A8', '#33FFF3', '#F3FF33', '#FF8C33'];
-        const numSegments = segments.length;
-        const anglePerSegment = (2 * Math.PI) / numSegments;
-        let currentAngle = 0;
-        let isSpinning = false;
-        let spinTimeout = null;
-        let spinAngleStart = 0;
-        let spinTime = 0;
-        let spinTimeTotal = 0;
-
-        // Draw the wheel
-        function drawWheel() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            const centerX = canvas.width / 2;
-            const centerY = canvas.height / 2;
-            const outerRadius = Math.min(centerX, centerY) - 10;
-
-            for (let i = 0; i < numSegments; i++) {
-                const startAngle = currentAngle + i * anglePerSegment;
-                const endAngle = startAngle + anglePerSegment;
-                // Draw segment
-                ctx.beginPath();
-                ctx.moveTo(centerX, centerY);
-                ctx.arc(centerX, centerY, outerRadius, startAngle, endAngle, false);
-                ctx.fillStyle = colors[i % colors.length];
-                ctx.fill();
-                ctx.strokeStyle = '#ffffff';
-                ctx.lineWidth = 2;
-                ctx.stroke();
-                // Draw text
-                ctx.save();
-                ctx.translate(centerX, centerY);
-                ctx.rotate(startAngle + anglePerSegment / 2);
-                ctx.textAlign = "right";
-                ctx.fillStyle = "#000000";
-                ctx.font = 'bold 16px Arial';
-                ctx.fillText(segments[i], outerRadius - 10, 0);
-                ctx.restore();
-            }
-
-            // Draw center circle
-            ctx.beginPath();
-            ctx.arc(centerX, centerY, 50, 0, 2 * Math.PI, false);
-            ctx.fillStyle = '#ffffff';
-            ctx.fill();
-            ctx.strokeStyle = '#333333';
-            ctx.lineWidth = 5;
-            ctx.stroke();
-
-            // Draw pointer
-            ctx.fillStyle = '#333333';
-            ctx.beginPath();
-            ctx.moveTo(centerX - 10, centerY - (outerRadius + 20));
-            ctx.lineTo(centerX + 10, centerY - (outerRadius + 20));
-            ctx.lineTo(centerX, centerY - (outerRadius - 10));
-            ctx.closePath();
-            ctx.fill();
-        }
-
-        // Spin the wheel
-        function spin() {
-            if (isSpinning) return;
-            isSpinning = true;
-            spinAngleStart = Math.random() * 10 + 10; // Spin speed
-            spinTime = 0;
-            spinTimeTotal = Math.random() * 3000 + 4000; // Spin duration between 4-7 seconds
-            rotateWheel();
-        }
-
-        function rotateWheel() {
-            spinTime += 30;
-            if (spinTime >= spinTimeTotal) {
-                stopRotateWheel();
-                return;
-            }
-            const spinAngle = spinAngleStart - easeOut(spinTime, 0, spinAngleStart, spinTimeTotal);
-            currentAngle += (spinAngle * Math.PI / 180);
-            currentAngle %= (2 * Math.PI);
-            drawWheel();
-            spinTimeout = setTimeout(rotateWheel, 30);
-        }
-
-        function stopRotateWheel() {
-            clearTimeout(spinTimeout);
-            isSpinning = false;
-            const degrees = currentAngle * 180 / Math.PI + 90;
-            const arcd = anglePerSegment * 180 / Math.PI;
-            const index = Math.floor((360 - (degrees % 360)) / arcd) % numSegments;
-            alert("You won " + segments[index]);
-        }
-
-        // Easing function
-        function easeOut(t, b, c, d) {
-            t /= d;
-            t--;
-            return c * (t * t * t + 1) + b;
-        }
-
-        // Initialize
-        drawWheel();
-
-        // Event listener
-        document.getElementById('spinButton').addEventListener('click', spin);
-    </script>
-
 </body>
 </html>
