--- a/welcome.html
+++ b/welcome.html
@@ -33,11 +33,11 @@
     <div class="welcome-container">
         <h1>Welcome, <span id="username">Player</span>!</h1>
         <div class="user-stats">
-            <p>Total Bets: £<span id="total-bets">0.00</span></p>
+            <p>Total Bets: <span id="total-bets">0.00</span></p>
             <p>Total Wins: <span id="total-wins">0</span></p>
-            <p>Total Losses: £<span id="total-losses">0.00</span></p>
-            <p>Total Balance: £<span id="total-balance">500.00</span></p>
-            <p>Total Profit: £<span id="total-profit">0.00</span></p>
+            <p>Total Losses: <span id="total-losses">0.00</span></p>
+            <p>Total Balance: <span id="total-balance">500.00</span></p>
+            <p>Total Profit: <span id="total-profit">0.00</span></p>
         </div>
 
         <!-- Game Options Carousel -->
