--- a/user-auth.html
+++ b/user-auth.html
@@ -7,35 +7,42 @@
     <link rel="stylesheet" href="user-auth.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-card">
-            <h2 class="form-title">Register</h2>
-            <input type="text" id="register-username" class="form-input" placeholder="Username" required>
-            <input type="password" id="register-password" class="form-input" placeholder="Password" required>
-            <button id="register-button" class="form-button">Register</button>
-        </div>
+    <div class="main-container">
+        <div class="flip-container">
+            <div class="flipper">
+                <!-- Login Card (Front) -->
+                <div class="card front">
+                    <h2 class="form-title">Login</h2>
+                    <input type="text" id="login-username" class="form-input" placeholder="Username" required>
+                    <input type="password" id="login-password" class="form-input" placeholder="Password" required>
+                    <!-- Message for Login -->
+                    <div id="login-message" class="message" style="margin-bottom: 15px;"></div>
+                    <div class="button-group" style="margin-top: 10px; margin-bottom: 25px;">
+                        <button id="login-button" class="form-button" style="margin-right: 10px;">Login</button>
+                        <button id="guest-button" class="form-button guest-button">Guest Mode</button>
+                    </div>
+                    <div class="switch-card">
+                        Don't have an account? 
+                        <span id="switch-to-register" class="register-link">Register</span>
+                    </div>
+                </div>
 
-        <div class="divider">
-            <span class="divider-text">OR</span>
+                <!-- Register Card (Back) -->
+                <div class="card back">
+                    <h2 class="form-title">Register</h2>
+                    <input type="text" id="register-username" class="form-input" placeholder="Username" required>
+                    <input type="password" id="register-password" class="form-input" placeholder="Password" required>
+                    <!-- Message for Register -->
+                    <div id="register-message" class="message" style="margin-bottom: 15px;"></div>
+                    <button id="register-button" class="form-button" style="margin-top: 10px;">Register</button>
+                    <div class="switch-card">
+                        Already have an account? 
+                        <span id="switch-to-login" class="login-link">Login</span>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="form-card">
-            <h2 class="form-title">Login</h2>
-            <input type="text" id="login-username" class="form-input" placeholder="Username" required>
-            <input type="password" id="login-password" class="form-input" placeholder="Password" required>
-            <button id="login-button" class="form-button">Login</button>
-        </div>
-
-        <div class="divider">
-            <span class="divider-text">OR</span>
-        </div>
-
-        <div class="form-card">
-            <button id="guest-button" class="form-button guest-button">Guest Mode</button>
-        </div>
-        
-        <div id="message" class="message"></div>
-    </div>
+    </div>    
 
     <script src="user-auth.js"></script>
 </body>
