--- a/welcome.html
+++ b/welcome.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Suite - Welcome</title>
     <!-- Google Fonts -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="welcome.css">
 </head>
 
 <body>
+    <!-- Background Music -->
+    <audio id="background-music" src="./sounds/background_music.mp3" autoplay loop style="display: none;"></audio>
+
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
@@ -23,6 +27,11 @@
             </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
+                    <button id="sound-toggle" class="nav-link">
+                        <i class="fas fa-volume-mute" id="sound-icon"></i>
+                    </button>
+                </li>
+                <li class="nav-item">
                     <button id="logout-button" class="nav-link">Logout</button>
                 </li>
             </ul>
@@ -33,11 +42,11 @@
     <div class="welcome-container">
         <h1>Welcome, <span id="username">Player</span>!</h1>
         <div class="user-stats">
-            <p>Total Bets: <span id="total-bets">0.00</span></p>
-            <p>Total Wins: <span id="total-wins">0</span></p>
-            <p>Total Losses: <span id="total-losses">0.00</span></p>
-            <p>Total Balance: <span id="total-balance">500.00</span></p>
-            <p>Total Profit: <span id="total-profit">0.00</span></p>
+            <p>Total Bets: <span id="total-bets"></span></p>
+            <p>Total Wins: <span id="total-wins"></span></p>
+            <p>Total Losses: <span id="total-losses"></span></p>
+            <p>Total Balance: <span id="total-balance"></span></p>
+            <p>Total Profit: <span id="total-profit"></span></p>
         </div>
 
         <!-- Game Options Carousel -->
@@ -73,9 +82,7 @@
                 </div>
             </div>
             <!-- Pagination Dots -->
-            <div class="carousel-pagination" id="carousel-pagination">
-                <!-- Dots will be generated dynamically via JavaScript -->
-            </div>
+            <div class="carousel-pagination" id="carousel-pagination"></div>
         </div>
 
         <!-- Reward Modal -->
