--- a/rocket-crash.html
+++ b/rocket-crash.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Suite - Rocket Crash</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="./css/rocket-crash.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -14,56 +16,55 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="welcome.html" class="nav-logo">Game Suite</a>
-            <div class="nav-toggle" id="mobile-menu">
-                <span class="burger"></span>
-                <span class="burger"></span>
-                <span class="burger"></span>
-            </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item"><a href="blackjack.html" class="nav-link">Blackjack</a></li>
                 <li class="nav-item"><a href="rocket-crash.html" class="nav-link active">Rocket Crash</a></li>
                 <li class="nav-item"><a href="Scratch_Win.html" class="nav-link">Scratch</a></li>
                 <li class="nav-item"><a href="welcome.html" class="nav-link">User</a></li>
             </ul>
+            <div class="nav-toggle" id="mobile-menu">
+                <span class="burger"></span>
+                <span class="burger"></span>
+                <span class="burger"></span>
+            </div>
         </div>
     </nav>
 
     <!-- Rocket Crash Game Main Section -->
-    <div class="rocket-crash-game">
-        <h1>Rocket Crash Game</h1>
-
-        <!-- Display Total Balance -->
-        <div id="total-balance" class="total-balance-text">Total Balance: £0.00</div>
-
-        <!-- Graph Container -->
-        <div id="graph-container">
-            <canvas id="multiplier-graph" width="400" height="200"></canvas>
-            <div id="past-crashes" class="past-crashes">
-                <span>Past Crashes: </span>
-                <span id="past-crash-list"></span>
+    <div class="container mt-5 d-flex justify-content-center">
+        <div class="rocket-crash-game">
+            <h1>Rocket Crash Game</h1>
+            <!-- Display Total Balance -->
+            <div id="total-balance" class="total-balance-text">Total Balance: £0.00</div>
+            <!-- Graph Container -->
+            <div id="graph-container">
+                <canvas id="multiplier-graph" width="400" height="200"></canvas>
+                <div id="past-crashes" class="past-crashes">
+                    <span>Past Crashes: </span>
+                    <span id="past-crash-list"></span>
+                </div>
             </div>
+            <!-- Multiplier Display -->
+            <p id="multiplier" class="multiplier-text">0.00x</p>
+            <!-- Input and Buttons for Bets and Actions -->
+            <input type="number" id="bet-amount" class="form-control mb-2" placeholder="Enter Bet Amount">
+            <button id="place-bet-button" class="btn btn-success mb-2">Place Bet</button>
+            <button id="cash-out-button" class="btn btn-warning mb-2" disabled>Cash Out</button>
+            <!-- New Buttons for Skipping and Watching -->
+            <button id="skip-to-crash-button" class="btn btn-info mb-2" disabled>Skip to Crash</button>
+            <button id="watch-only-button" class="btn btn-danger mb-2">Watch Rocket</button>
+            <!-- Result and Profit Display -->
+            <div id="result"></div>
+            <div id="crash-point" class="crash-point-text"></div>
+            <div id="rocket-profit">Total Profit: £0</div>
         </div>
-
-        <!-- Multiplier Display -->
-        <p id="multiplier" class="multiplier-text">0.00x</p>
-
-        <!-- Input and Buttons for Bets and Actions -->
-        <input type="number" id="bet-amount" placeholder="Enter Bet Amount">
-        <button id="place-bet-button">Place Bet</button>
-        <button id="cash-out-button" disabled>Cash Out</button>
-
-        <!-- New Buttons for Skipping and Watching -->
-        <button id="skip-to-crash-button" disabled>Skip to Crash</button>
-        <button id="watch-only-button">Watch Rocket</button>
-
-        <!-- Result and Profit Display -->
-        <div id="result"></div>
-        <div id="crash-point" class="crash-point-text"></div>
-        <div id="rocket-profit">Total Profit: £0</div>
     </div>
 
     <!-- JavaScript -->
-     <script src="./js/rocket-crash.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="./js/rocket-crash.js"></script>
 </body>
 
 </html>
