--- a/rocket-crash.html
+++ b/rocket-crash.html
@@ -34,8 +34,8 @@
     <div class="container mt-5 d-flex justify-content-center">
         <div class="rocket-crash-game">
             <h1>Rocket Crash Game</h1>
-            <!-- Display Total Balance -->
-            <div id="total-balance" class="total-balance-text">Total Balance: £0.00</div>
+            <!-- Display Current Balance -->
+            <div id="current-balance" class="current-balance-text">Current Balance: £0.00</div>
             <!-- Graph Container -->
             <div id="graph-container">
                 <canvas id="multiplier-graph" width="400" height="200"></canvas>
@@ -48,15 +48,22 @@
             <p id="multiplier" class="multiplier-text">0.00x</p>
             <!-- Input and Buttons for Bets and Actions -->
             <input type="number" id="bet-amount" class="form-control mb-2" placeholder="Enter Bet Amount">
+            <button id="bet-100-button" class="btn btn-primary mb-2">Bet £100</button>
+            <button id="bet-500-button" class="btn btn-primary mb-2">Bet £500</button>
+            <button id="bet-1000-button" class="btn btn-primary mb-2">Bet £1000</button>
+            <button id="bet-half-balance-button" class="btn btn-secondary mb-2">Bet Half Balance</button>
             <button id="place-bet-button" class="btn btn-success mb-2">Place Bet</button>
             <button id="cash-out-button" class="btn btn-warning mb-2" disabled>Cash Out</button>
             <!-- New Buttons for Skipping and Watching -->
             <button id="skip-to-crash-button" class="btn btn-info mb-2" disabled>Skip to Crash</button>
             <button id="watch-only-button" class="btn btn-danger mb-2">Watch Rocket</button>
+            <!-- Error Message Display -->
+            <div id="error-message" class="alert alert-danger" style="display: none;"></div>
             <!-- Result and Profit Display -->
             <div id="result"></div>
             <div id="crash-point" class="crash-point-text"></div>
             <div id="rocket-profit">Total Profit: £0</div>
+            <div id="highest-cash-out" class="highest-cash-out-text">Highest Cash Out: £0</div>
         </div>
     </div>
 
