--- a/rocket-crash.html
+++ b/rocket-crash.html
@@ -53,8 +53,7 @@
             <button id="bet-1000-button" class="btn btn-primary mb-2">Bet £1000</button>
             <button id="bet-half-balance-button" class="btn btn-secondary mb-2">Bet Half Balance</button>
             <button id="place-bet-button" class="btn btn-success mb-2">Place Bet</button>
-            <button id="cash-out-button" class="btn btn-warning mb-2" disabled>Cash Out</button>
-            <!-- New Buttons for Skipping and Watching -->
+            <button id="cash-out-button" class="btn btn-warning mb-2" style="display: none;">Cash Out</button>
             <button id="skip-to-crash-button" class="btn btn-info mb-2" disabled>Skip to Crash</button>
             <button id="watch-only-button" class="btn btn-danger mb-2">Watch Rocket</button>
             <!-- Error Message Display -->
