--- a/Scratch_Win.html
+++ b/Scratch_Win.html
@@ -124,10 +124,10 @@
     <div class="navbar__logo">Game Suite</div>
     <button id="mobile-menu-button" class="navbar__toggle">&#9776;</button>
     <ul class="navbar__links">
-      <li><a href="welcome.html" class="navbar__link">Home</a></li>
       <li><a href="blackjack.html" class="navbar__link">Blackjack</a></li>
       <li><a href="rocket-crash.html" class="navbar__link">Rocket Crash</a></li>
-      <li><a href="scratch_win.html" class="navbar__link">Scratch & Win</a></li>
+      <li class="nav-item"><a href="findtheneedle.html" class="nav-link">Joker</a></li>
+      <li><a href="welcome.html" class="navbar__link">User</a></li>
     </ul>
   </nav>
 
