--- a/blackjack.html
+++ b/blackjack.html
@@ -23,6 +23,7 @@
                 <li class="nav-item"><a href="blackjack.html" class="nav-link">Blackjack</a></li>
                 <li class="nav-item"><a href="rocket-crash.html" class="nav-link">Rocket Crash</a></li>
                 <li class="nav-item"><a href="Scratch_Win.html" class="nav-link">Scratch</a></li>
+                <li class="nav-item"><a href="findtheneedle.html" class="nav-link">Joker</a></li>
                 <li class="nav-item"><a href="welcome.html" class="nav-link">User</a></li>
             </ul>
         </div>
