--- a/rocket-crash.html
+++ b/rocket-crash.html
@@ -18,8 +18,8 @@
             <a href="welcome.html" class="nav-logo">Game Suite</a>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item"><a href="blackjack.html" class="nav-link">Blackjack</a></li>
-                <li class="nav-item"><a href="rocket-crash.html" class="nav-link active">Rocket Crash</a></li>
                 <li class="nav-item"><a href="Scratch_Win.html" class="nav-link">Scratch</a></li>
+                <li class="nav-item"><a href="findtheneedle.html" class="nav-link">Joker</a></li>
                 <li class="nav-item"><a href="welcome.html" class="nav-link">User</a></li>
             </ul>
             <div class="nav-toggle" id="mobile-menu" aria-expanded="false">
